[package]
name = "notify"
version = "5.1.0"
rust-version = "1.56"
description = "Cross-platform filesystem notification library"
documentation = "https://docs.rs/notify"
homepage = "https://github.com/notify-rs/notify"
repository = "https://github.com/notify-rs/notify.git"
readme = "../README.md"
license = "CC0-1.0 OR Artistic-2.0"
keywords = ["events", "filesystem", "notify", "watch"]
categories = ["filesystem"]
authors = [
  "Félix Saparelli <me@passcod.name>",
  "Daniel Faust <hessijames@gmail.com>"
]

edition = "2021"

[dependencies]
bitflags = "1.0.4"